--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 # This job is a continuous integration pipeline that does stuff
 # upon pushes of source code to the master branch of the repository. 
-
+#
 # Step 1
     # Analyze source code 
     # Run all python *.py files thru the linter
@@ -49,7 +49,7 @@ jobs:
             pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
-          name: run tests
+          name: execute tests
           command: |
             . venv/bin/activate
             flake8 --exclude=venv* --statistics
