--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
             . venv/bin/activate
             pip install -r requirements.txt
       # Step 3: run linter and tests
+      - test
       - run:
           name: execute tests
           command: |
