--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.11
+      - image: python:3.11
 
     working_directory: ~/repo
 
@@ -48,7 +48,6 @@ jobs:
             . venv/bin/activate
             pip install -r requirements.txt
       # Step 3: run linter and tests
-      - test
       - run:
           name: execute tests
           command: |
