--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           name: execute tests
           command: |
             . venv/bin/activate
-            flake8 --exclude=venv* --statistics
+            flake8 --exclude=venv* --statistics -v
             coverage run -m pytest
             coverage report
             mypy
